apps/backrest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backrest
  namespace: backrest
  annotations:
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: backrest${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backrest
                port:
                  number: 80
